# open-event-scripts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/: create-session-speakers.py  generate_session_tweet_csv.py  import_access_codes.py  import_access_codes_test.csv  import_discount_codes.py  send_emails_via_sendgrid.py
